################################################################################
# This is the CMakeLists file for the distr_systens directory.
#
################################################################################

# Add all subdirectories
add_subdirectory(boost_asio)
#add_subdirectory(docker)