################################################################################
# This is the CMakeLists file for the distributed_systems directory.
#
################################################################################

# Add all subdirectories
add_subdirectory(boost_tcp)
add_subdirectory(boost_udp)